# postcql

./: .gitignore  .gitmodules  README.md  config.toml.example  main.py  package_submission.sh  pyproject.toml
.codex/skills/report-to-poc/: SKILL.md
.codex/skills/report-to-poc/agents/: openai.yaml
.codex/skills/report-upstream-check/: SKILL.md
postcql/: cli.py  config.py  logging.py
postcql/agent/: __init__.py  core.py  events.py  tools.py
postcql/report/: __init__.py  models.py  writer.py
postcql/report/templates/: full-example.json  single-report.typ
postql/: cli.py  codeql_csv.py  codeql_sarif.py  config.py  logging.py  run_artifacts.py  sarif_schema_models.py
postql/agent/: core.py  events.py  prompting.py  tools.py
postql/report/: __init__.py  models.py  writer.py
postql/report/templates/: full_report.typ  single-example.json  single-report.typ  template.typ
report/: arch.typ  colors.typ  data.typ  figs.typ  main.typ  ref.bib
